Fix spacing issues

--- a/frontend/src/components/ui/Layout.module.css
+++ b/frontend/src/components/ui/Layout.module.css
@@ -46,5 +46,4 @@
 
 .content {
   grid-area: content;
-  padding: var(--size2)
 }
